[package]
edition = "2021"
name = "rglk"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
bit-set = "0.5"
bracket-bevy = {git = "https://github.com/amethyst/bracket-lib"}
bracket-terminal = {git = "https://github.com/amethyst/bracket-lib"}
bracket-pathfinding = {git = "https://github.com/amethyst/bracket-lib"}
